<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Binary Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_converter">Converter</string>
    <string name="input">Enter a number&#8230;</string>
    <string name="binary_title">Binary (8 bit)</string>
    <string name="hex_title">Hexadecimal (8 Bit)</string>
    <string name="dec_title">Decimal (8 Bit, 255)</string>
    <string name="button_convert_dec">Convert from decimal</string>
    <string name="button_convert_hex">Convert from hex</string>
    <string name="button_convert_binary">Convert from binary</string>

</resources>
