<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:text="@string/binary_title" />
    <EditText android:id="@+id/binary_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="8"
        android:hint="@string/input" />
    
    <Button android:id="@+id/button_convert_binary"
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_size"
        android:text="@string/button_convert_binary" />
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:text="@string/hex_title" />
    <EditText android:id="@+id/hex_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLength="2"
        android:hint="@string/input" />
    
    <Button android:id="@+id/button_convert_hex"
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_size"
        android:text="@string/button_convert_hex" />
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:text="@string/dec_title" />
    <EditText android:id="@+id/dec_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/input" />
    
    <Button android:id="@+id/button_convert_dec"
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text_size"
        android:text="@string/button_convert_dec" />
    
</LinearLayout>
